--- a/src/frontend/templates/blogs.html
+++ b/src/frontend/templates/blogs.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>All Blogs</h1>
-    <ul id="all-blogs"></ul>
+    <div class="container">
+        <h1>All Blogs</h1>
+        <ul id="all-blogs"></ul>
+    </div>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
