--- a/src/frontend/templates/404.html
+++ b/src/frontend/templates/404.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>404 - Page Not Found</h1>
-    <p>Sorry, the page you are looking for does not exist.</p>
-    <a href="/">Go to Home</a>
+    <div class="container">
+        <h1>404 - Page Not Found</h1>
+        <p>Sorry, the page you are looking for does not exist.</p>
+        <a href="/">Go to Home</a>
+    </div>
 </body>
 </html>
