--- a/src/frontend/templates/account_settings.html
+++ b/src/frontend/templates/account_settings.html
@@ -6,22 +6,24 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Account Settings</h1>
-    <form action="/api/user" method="post">
-        <label for="update-username">Username</label>
-        <input type="text" id="update-username" name="username">
-        <br>
-        <label for="update-password">Password</label>
-        <input type="password" id="update-password" name="password">
-        <br>
-        <label for="update-email">Email</label>
-        <input type="email" id="update-email" name="email">
-        <br>
-        <label for="update-avatar">Avatar URL</label>
-        <input type="text" id="update-avatar" name="avatar">
-        <br>
-        <button type="submit">Update</button>
-    </form>
+    <div class="container">
+        <h1>Account Settings</h1>
+        <form action="/api/user" method="post">
+            <label for="update-username">Username</label>
+            <input type="text" id="update-username" name="username">
+            
+            <label for="update-password">Password</label>
+            <input type="password" id="update-password" name="password">
+            
+            <label for="update-email">Email</label>
+            <input type="email" id="update-email" name="email">
+            
+            <label for="update-avatar">Avatar URL</label>
+            <input type="text" id="update-avatar" name="avatar">
+            
+            <button type="submit">Update</button>
+        </form>
+    </div>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
