--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -6,16 +6,18 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="/api/auth/login" method="post" id="login-form">
-        <label for="login-username">Username</label>
-        <input type="text" id="login-username" name="username">
-        <br>
-        <label for="login-password">Password</label>
-        <input type="password" id="login-password" name="password">
-        <br>
-        <button type="submit">Login</button>
-    </form>
-    <div id="alertBanner" class="hidden">Login Failed</div>
+    <div class="container">
+        <h1>Login</h1>
+        <form action="/api/auth/login" method="post" id="login-form">
+            <label for="login-username">Username</label>
+            <input type="text" id="login-username" name="username" required>
+            
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" name="password" required>
+            
+            <button type="submit">Login</button>
+        </form>
+    </div>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
