--- a/src/frontend/templates/register.html
+++ b/src/frontend/templates/register.html
@@ -6,22 +6,24 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Register</h1>
-    <form action="/api/auth/register" method="post" id="signup-form">
-        <label for="register-username">Username</label>
-        <input type="text" id="register-username" name="username">
-        <br>
-        <label for="register-password">Password</label>
-        <input type="password" id="register-password" name="password">
-        <br>
-        <label for="register-email">Email</label>
-        <input type="email" id="register-email" name="email">
-        <br>
-        <label for="register-avatar">Avatar URL</label>
-        <input type="text" id="register-avatar" name="avatar">
-        <br>
-        <button type="submit">Register</button>
-    </form>
-    <div id="alertBanner" class="hidden">Passwords do not match</div>
+    <div class="container">
+        <h1>Register</h1>
+        <form action="/api/auth/register" method="post" id="signup-form">
+            <label for="register-username">Username</label>
+            <input type="text" id="register-username" name="username" required>
+            
+            <label for="register-password">Password</label>
+            <input type="password" id="register-password" name="password" required>
+            
+            <label for="register-email">Email</label>
+            <input type="email" id="register-email" name="email" required>
+            
+            <label for="register-avatar">Avatar URL</label>
+            <input type="text" id="register-avatar" name="avatar">
+            
+            <button type="submit">Register</button>
+        </form>
+    </div>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
