--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -16,6 +16,7 @@
             <input type="password" id="login-password" name="password" required>
             
             <button type="submit">Login</button>
+            <label>already have an account? <a></a href="/login">login</label>
         </form>
         {% if errorMsg %}
             <p><strong>Error</strong>: {{ errorMsg }}</p>
