--- a/src/frontend/templates/register.html
+++ b/src/frontend/templates/register.html
@@ -22,7 +22,7 @@
             <input type="text" id="register-avatar" name="avatar">
             
             <button type="submit">Register</button>
-            <label>already have an account? <a></a href="/login">login</label>
+            <label>already have an account? <a href="/login">login</a></label>
         </form>
     </div>
     <script src="/static/js/script.js"></script>
