--- a/src/frontend/templates/blog_edit.html
+++ b/src/frontend/templates/blog_edit.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Blog</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Edit Blog{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Edit Blog</h1>
         <form action="/api/blogs/{{ blog_id }}/edit" method="post">
@@ -17,7 +12,5 @@
             
             <button type="submit">Update</button>
         </form>
-    </div>
-    <script src="/static/js/script.js"></script>
-</body>
-</html>
+    <div>
+{% endblock %}
