--- a/src/frontend/templates/blogs.html
+++ b/src/frontend/templates/blogs.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>All Blogs</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}All Blogs{% endblock %}
+{% block content %}
     <div class="container">
         <h1>All Blogs</h1>
         <ul id="all-blogs"></ul>
-    </div>
-    <script src="/static/js/script.js"></script>
-</body>
-</html>
+    <div>
+{% endblock %}
