--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -16,7 +16,5 @@
         {% if error %}
             <p><strong>Error</strong>: {{ error }}</p>
         {% else %}
-            <p><strong>Debug</strong>: {{ error }}</p>
-        {% endif %}
-        <p>test: {{ test }}</p>
+    </div>
 {% endblock %}
