--- a/src/frontend/templates/profile.html
+++ b/src/frontend/templates/profile.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Profile</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Profile{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Profile</h1>
         <p>ID: <span id="user-id"></span></p>
@@ -26,7 +21,5 @@
             
             <button type="submit">Create</button>
         </form>
-    </div>
-    <script src="/static/js/script.js"></script>
-</body>
-</html>
+    <div>
+{% endblock %}
