--- a/src/frontend/templates/register.html
+++ b/src/frontend/templates/register.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Register{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Register</h1>
         <form action="/register" method="post" id="signup-form">
@@ -24,7 +19,8 @@
             <button type="submit">Register</button>
             <label>already have an account? <a href="/login">login</a></label>
         </form>
-    </div>
-    <script src="/static/js/script.js"></script>
-</body>
-</html>
+        {% if error %}
+            <p><strong>Error</strong>: {{ error }}</p>
+        {% else %}
+    <div>
+{% endblock %}
