--- a/src/frontend/templates/register.html
+++ b/src/frontend/templates/register.html
@@ -21,6 +21,6 @@
         </form>
         {% if error %}
             <p><strong>Error</strong>: {{ error }}</p>
-        {% else %}
+        {% endif %}
     <div>
 {% endblock %}
