--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -15,6 +15,6 @@
         </form>
         {% if error %}
             <p><strong>Error</strong>: {{ error }}</p>
-        {% else %}
+        {% endif %}
     </div>
 {% endblock %}
