simple index page

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -2,6 +2,7 @@
 {% block title %}Demo Blog Website{% endblock %}
 {% block content %}
     <div class="container">
+        <h1>Demo Blog Website</h1>
         <label><a href="/login">login</a></label>
         <label><a href="/register">register</a></label>
     <div>
