unify front and backend domain name

--- a/src/frontend/templates/account_settings.html
+++ b/src/frontend/templates/account_settings.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <h1>Account Settings</h1>
-        <form action="/api/user" method="post">
+        <form action="/api-user" method="post">
             <label for="update-username">Username</label>
             <input type="text" id="update-username" name="username">
             
