--- a/src/frontend/templates/blog_edit.html
+++ b/src/frontend/templates/blog_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <h1>Edit Blog</h1>
-        <form action="/api/blogs/{{ blog_id }}/edit" method="post">
+        <form action="/api-blogs/{{ blog_id }}/edit" method="post">
             <label for="edit-blog-title">Title</label>
             <input type="text" id="edit-blog-title" name="title" required>
             
