--- a/src/frontend/templates/profile.html
+++ b/src/frontend/templates/profile.html
@@ -12,7 +12,7 @@
         <ul id="my-blogs"></ul>
         
         <h2>Create Blog</h2>
-        <form action="/api/blogs" method="post">
+        <form action="/api-blogs" method="post">
             <label for="blog-title">Title</label>
             <input type="text" id="blog-title" name="title" required>
             
