--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Demo Blog Website{% endblock %}
+{% block title %}{{index_title}}{% endblock %}
 {% block content %}
     <div class="container">
-        <h1>Demo Blog Website</h1>
+        <h1>{{index_title}}</h1>
         <label><a href="/login">login</a></label>
         <label><a href="/register">register</a></label>
     <div>
