split index title and header

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}{{index_title}}{% endblock %}
 {% block content %}
     <div class="container">
-        <h1>{{index_title}}</h1>
+        <h1>{{index_header}}</h1>
         <label><a href="/login">login</a></label>
         <label><a href="/register">register</a></label>
     <div>
